log/build_2023-12-30_15-34-45/mypkg/stderr.log
  File "/home/nishi/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 29
    if __name__ == '__main__'
                            ^
SyntaxError: invalid syntax

